# vtk-wasm

./: .dockerignore  .gitignore  AGENTS.md  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
cpp/: VtkApp.cpp  VtkApp.h  bindings.cpp
docs/superpowers/plans/: 2026-06-25-docker-build.md  2026-06-25-url-loader.md  2026-06-25-vtk-wasm-demonstrateur.md
docs/superpowers/specs/: 2026-06-25-docker-build-design.md  2026-06-25-rotation-interactive-design.md  2026-06-25-url-loader-design.md  2026-06-25-vtk-wasm-demonstrateur-design.md
nginx/: default.conf
web/: index.html
web/src/: color-palette.js  drag-drop.js  main.js  url-loader.js
